# Venus

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  build-run.sh  set_hooks.py
.githooks/: pre-commit.py
.github/workflows/: cmake-multi-platform.yml  codeql.yml  sample.yml
Venus/: CHANGELOG.md  CMakeLists.txt  Makefile
Venus-Client/: CHANGELOG.md  CMakeLists.txt
Venus-Client/app/: appClient.cpp
Venus-Sandbox/: CHANGELOG.md  CMakeLists.txt
Venus-Sandbox/app/: main.cpp
Venus/resources/config/: configCore.hpp  vkLayersConfig.hpp  windowNameConfig.hpp
Venus/resources/scripts/: compile_shaders.sh
Venus/resources/shaders/: simpleFragShader.frag  simpleVertShader.vert
Venus/src/: venus.hpp
Venus/src/app/: appCore.hpp
Venus/src/core/: appCore.cpp  appCore.hpp  entryPoint.hpp  windowCore.cpp  windowCore.hpp
Venus/src/window/: windowCore.cpp  windowCore.hpp
cmake/: platforms.cmake  sanitize.cmake.in  version.hpp.in  x86_64clang.cmake  x86_64gcc-g++.cmake  x86_64msvc.cmake
documentation/doxy/md/: buildSystem.md  clangd.md  devLinks.md  mainPage.md
documentation/licenses/: vulkan.license
source/: CMakeLists.txt
source/.client/: main.cpp
source/application/: application.cpp  application.hpp
source/common/: appDetails.hpp  gpuStructs.hpp  venusResult.hpp  version.hpp
source/debug/: CMakeLists.txt
source/debug/logger/: quill_PCH.hpp
source/devices/: physicalDevice.cpp  physicalDevice.hpp
source/engine/: CMakeLists.txt
source/engine/common/: gpuStructs.hpp  systemProperties.hpp  venusConfigOptions.hpp  version.hpp
source/engine/renderer/: renderConfig.hpp
source/engine/renderer/device/: gpuStructures.hpp  logicalDevice.cpp  logicalDevice.hpp  physicalDevice.cpp  physicalDevice.hpp
source/engine/renderer/pipeline/: graphicsPipeline.cpp  graphicsPipeline.hpp
source/engine/renderer/renderer/: renderer.cpp  renderer.hpp
source/engine/renderer/swapchain/: swapchain.cpp  swapchain.hpp
source/engine/rendering/glfw/: window.hpp
source/engine/rendering/vulkan/: vulkanCore.hpp
source/engine/rendering/vulkan/device/: logicalDevice.cpp  logicalDevice.hpp
source/engine/rendering/vulkan/instance/: instance.cpp  instance.hpp
source/engine/runtime/: runtime.cpp  runtime.hpp
source/engine/runtime/input/: keyboardInput.cpp  keyboardInput.hpp
source/engine/runtime/instance/: instance.cpp  instance.hpp
source/engine/runtime/window/: window.cpp  window.hpp
source/glfwContext/: window.cpp  window.hpp
source/instance/: instance.cpp  instance.hpp
source/logger/: VN_logger.cpp  VN_logger.hpp  quill_PCH.hpp
source/renderSystem/: CMakeLists.txt
source/renderSystem/common/: common.hpp
source/renderSystem/device/: logicalDevice.cpp  logicalDevice.hpp  physicalDevice.cpp  physicalDevice.hpp
source/renderSystem/instance/: instance.cpp  instance.hpp
source/renderSystem/renderSystem/: renderSystem.cpp  renderSystem.hpp
source/renderSystem/swapchain/: swapchain.cpp  swapchain.hpp
source/renderSystem/window/: window.cpp  window.hpp
source/shaders/: triangle.frag  triangle.vert
source/vulkanContext/: instance.cpp  instance.hpp
source/vulkanCore/: instance.cpp  logicalDevice.cpp  physicalDevice.cpp  physicalDevice.hpp  vulkanCore.cpp
source/window/: window.cpp  window.hpp
sources/app/: app.cpp  app.hpp
sources/coreVulkan/device/: device.cpp  device.hpp  deviceConfig.hpp  queueFamilyIndices.cpp  queueFamilyIndices.hpp  swapchainSupportDetails.cpp  swapchainSupportDetails.hpp
sources/coreVulkan/instance/: glfwExtensions.cpp  glfwExtensions.hpp  instance.cpp  instance.hpp  instanceConfig.hpp  validationLayers.cpp  validationLayers.hpp
sources/coreVulkan/window/: glfwWindow.cpp  glfwWindow.hpp
src/123MAIN/: main.cpp
src/app/: appCore.cpp  appCore.hpp
src/window/: windowCore.cpp  windowCore.hpp
tools/client/: testclient.cpp
tools/scripts/: buildRun.sh  shaderCompile.sh
